build: swagger done
