# app/controllers/OrganizationController.go
@@ -13,6 +13,16 @@ import (
 	"github.com/gofiber/fiber/v2"
 )
 
+// CreateOrg func for create new org.
+// @Description Create new org.
+// @Summary Create new org
+// @Tags Org
+// @Accept json
+// @Produce json
+// @Param data body string true "Data"
+// @Success 200 {object} response.CreateOrgResponse
+// @Security ApiKeyAuth
+// @Router /api/v1/create [post]
 func CreateOrganization(c *fiber.Ctx) error {
 
 	org := &request.CreateOrgRequest{}
@@ -62,6 +72,16 @@ func CreateOrganization(c *fiber.Ctx) error {
 	return c.JSON(resp)
 }
 
+// AddUserToOrg func for Add User to org.
+// @Description Add User to org.
+// @Summary Add User
+// @Tags Org
+// @Accept json
+// @Produce json
+// @Param data body string true "data"
+// @Success 200 {object} models.Organization
+// @Security ApiKeyAuth
+// @Router /api/v1/add [post]
 func AddUser(c *fiber.Ctx) error {
 
 	req := &request.CreateUserRequest{}
@@ -104,14 +124,14 @@ func AddUser(c *fiber.Ctx) error {
 
 	if fetchedUser.Role == "ROLE_USER" {
 
-		err := models.AddUserInOrg(*org, fetchedUser)
+		models.AddUserInOrg(*org, *fetchedUser)
 
-		if err != nil {
-			return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-				"error": true,
-				"msg":   "Please try again later.",
-			})
-		}
+		// if err != false {
+		// 	return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+		// 		"error": true,
+		// 		"msg":   "Please try again later.",
+		// 	})
+		// }
 
 		userResp := &response.UserResponse{
 			Id:       fetchedUser.Id,
@@ -135,14 +155,14 @@ func AddUser(c *fiber.Ctx) error {
 
 	newUser.Create()
 
-	err := models.AddUserInOrg(*org, *newUser)
+	models.AddUserInOrg(*org, *newUser)
 
-	if err != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"error": true,
-			"msg":   "Please try again later.",
-		})
-	}
+	// if err != false {
+	// 	return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+	// 		"error": true,
+	// 		"msg":   "Please try again later.",
+	// 	})
+	// }
 
 	userResp := &response.UserResponse{
 		Id:       newUser.Id,
@@ -158,6 +178,15 @@ func AddUser(c *fiber.Ctx) error {
 	return c.JSON(orgResp)
 }
 
+// DeleteUser func for Delete User.
+// @Description Delete User .
+// @Summary Delete User
+// @Tags Org
+// @Produce json
+// @Success 200
+// @Param orgid path int true "Org ID"
+// @Param userid path int true "User ID"
+// @Router /api/v1/delete/{userid}/{orgid} [delete]
 func DeleteUser(c *fiber.Ctx) error {
 
 	id, er := strconv.Atoi(c.Params("userid"))
@@ -175,14 +204,14 @@ func DeleteUser(c *fiber.Ctx) error {
 
 	org := models.FindByOrgById(orgId)
 
-	dbErr := models.DeleteUser(*org, *fetchedUser)
+	models.DeleteUser(*org, *fetchedUser)
 
-	if dbErr != nil {
-		return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
-			"error": true,
-			"msg":   "Please try again later.",
-		})
-	}
+	// if dbErr != nil {
+	// 	return c.Status(fiber.StatusInternalServerError).JSON(fiber.Map{
+	// 		"error": true,
+	// 		"msg":   "Please try again later.",
+	// 	})
+	// }
 
 	return c.Status(fiber.StatusOK).JSON(fiber.Map{
 		"error": false,
@@ -190,6 +219,14 @@ func DeleteUser(c *fiber.Ctx) error {
 	})
 }
 
+// ViewUser func for View User
+// @Description View User
+// @Summary View User
+// @Tags Org
+// @Produce json
+// @Param userid path int true "User ID"
+// @Success 200
+// @Router /api/v1/view/{userid} [get]
 func ViewUser(c *fiber.Ctx) error {
 
 	id, err := strconv.Atoi(c.Params("userid"))
@@ -209,6 +246,14 @@ func ViewUser(c *fiber.Ctx) error {
 	})
 }
 
+// GetUserList func for View User List.
+// @Description View User list in org.
+// @Summary View User
+// @Tags Org
+// @Produce json
+// @Param orgid path int true "Org ID"
+// @Success 200
+// @Router /api/v1/all/{orgid} [get]
 func GetUserList(c *fiber.Ctx) error {
 
 	id, err := strconv.Atoi(c.Params("orgid"))
