# app/models/Organization.go
@@ -1,7 +1,6 @@
 package models
 
 import (
-	"errors"
 	u "gopher-rest/pkg/utils"
 	"time"
 
@@ -54,20 +53,12 @@ func FindByOrgById(id int) *Organization {
 
 }
 
-func AddUserInOrg(org Organization, user User) error {
-	err := GetDB().Model(&org).Association("Users").Append(&user).Error()
-	if err != "" {
-		return errors.New(err)
-	}
-	return db.Error
+func AddUserInOrg(org Organization, user User) {
+	GetDB().Model(&org).Association("Users").Append(&user)
 }
 
-func DeleteUser(org Organization, user User) error {
-	err := GetDB().Model(&org).Association("Users").Delete(&user).Error()
-	if err != "" {
-		return errors.New(err)
-	}
-	return db.Error
+func DeleteUser(org Organization, user User) {
+	GetDB().Model(&org).Association("Users").Delete(&user)
 }
 
 func GetAllUsersInOrg(id int) []User {
