# pkg/routes/privateRoutes.go
@@ -2,7 +2,6 @@ package routes
 
 import (
 	"gopher-rest/app/controllers"
-	"gopher-rest/pkg/middleware"
 
 	"github.com/gofiber/fiber/v2"
 )
@@ -11,14 +10,14 @@ func PrivateRoutes(a *fiber.App) {
 
 	route := a.Group("/api/v1")
 
-	route.Post("/create", middleware.JWTProtected(), controllers.CreateOrganization)
+	route.Post("/create", controllers.CreateOrganization)
 
-	route.Post("/add", middleware.JWTProtected(), controllers.AddUser)
+	route.Post("/add", controllers.AddUser)
 
-	route.Delete("/delete/:userid/:orgid", middleware.JWTProtected(), controllers.DeleteUser)
+	route.Delete("/delete/:userid/:orgid", controllers.DeleteUser)
 
-	route.Get("/view/:userid", middleware.JWTProtected(), controllers.ViewUser)
+	route.Get("/view/:userid", controllers.ViewUser)
 
-	route.Get("/all/:orgid", middleware.JWTProtected(), controllers.GetUserList)
+	route.Get("/all/:orgid", controllers.GetUserList)
 
 }
